# Atulya-HR-Suite

./: .env.example  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
atulya_hr_suite/: cli.py  core.py  utils.py
src/atulya_hr_suite/: cli.py
