[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atulya-hr-suite"
dynamic = ["version"]
description = "Cross-platform Python CLI tool for HR and payroll management for Indian businesses"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Atulya Tantra"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "click>=8.0",
    "pandas>=1.3",
    "openpyxl>=3.0",
    "xlsxwriter>=3.0",
    "rich>=12.0",
    "python-dotenv>=0.20",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "fpdf2>=2.5",
]

[project.scripts]
atulya-hr = "atulya_hr_suite.cli:main"

[tool.setuptools.dynamic]
version = {attr = "atulya_hr_suite.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
